# TP-CCpp-HW2

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md
project/: CMakeLists.txt
project/include/: check_sum.h  check_sum_private.h
project/src/: check_sum.c  check_sum_mt.c  check_sum_par.c  check_sum_private.c  check_sum_seq.c
scripts/: install.sh  static-analyzers.sh  stress-tesing.sh
stress-testing/: CMakeLists.txt
stress-testing/include/: lib_loader.h  utils.h
stress-testing/src/: lib_loader.c  main.c  utils.c
testing/: CMakeLists.txt
testing/include/: utils.h
testing/src/: common_tests.cpp  main.cpp  parallel_tests.cpp  sequential_tests.cpp  utils.cpp
